# cppwick

./: CMakeLists.txt  Makefile  plot.sh
c/: Makefile  fwjson.cpp  fwparser.cpp  lexer.l  lexyacc.cpp  lexyacc.hpp  newick.cpp  newick.hpp  parser.y  yylex.hpp
cpp/: CMakeLists.txt
cpp/include/: FlexLexer.h  lexer.hpp  newick.hpp
cpp/src/: lexer.ll  main.cpp  newick.cpp  parser.yy  reader.cpp
include/: lexer.hpp  reader.hpp
src/: main.cpp  reader.cpp
